--- a/Css/style.css
+++ b/Css/style.css
@@ -1,14 +1,13 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 a {
   color: black;
 }
 nav {
   margin-bottom: 50px;
-  
 }
 header {
   background-color: orange;
@@ -42,7 +41,8 @@ h1 {
   text-align: center;
   margin-top: 0;
 }
-h2,h3 {
+h2,
+h3 {
   font-size: 1.6em;
 }
 h2 {
@@ -60,16 +60,13 @@ footer {
   justify-content: space-between;
   border-top: rgba(0, 0, 0, 0.222) solid 1px;
   padding: 20px 20px;
-  
 }
 footer p {
   color: black;
-  font:400
+  font: 400;
 }
 a:hover {
-  
 }
-
 
 /* Layout Wrappers  */
 .wrapper {
@@ -84,7 +81,6 @@ a:hover {
   margin: auto;
 }
 .introduction ul {
-  
 }
 .introduction p {
   margin-top: 25px;
@@ -93,7 +89,6 @@ a:hover {
 .intro-img {
   width: 80%;
   margin: auto;
-  
 }
 .intro-img img {
   width: 100%;
@@ -103,7 +98,8 @@ a:hover {
   text-align: center;
 }
 .intro-img {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.031),2px 10px 2px rgba(0, 0, 0, 0.031);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.031),
+    2px 10px 2px rgba(0, 0, 0, 0.031);
 }
 #skills {
   display: flex;
@@ -117,11 +113,9 @@ a:hover {
 
 /* Portfolio  */
 
-
 .bottom-nav {
   display: flex;
   flex-direction: row;
-  
 }
 .bottom-nav li {
   padding-left: 20px;
@@ -130,7 +124,6 @@ a:hover {
 .project-image {
   width: 95%;
   margin: 25px auto;
-  
 }
 .project-image img {
   width: 100%;
@@ -139,7 +132,6 @@ a:hover {
   margin-bottom: 15px;
   text-align: center;
 }
-
 
 /* Contact */
 .contact {
@@ -150,8 +142,8 @@ a:hover {
   margin: 25px auto;
 }
 
-@media only screen and (min-width:320px) {
-  .bottom-nav li a{
+@media only screen and (min-width: 320px) {
+  .bottom-nav li a {
     color: grey;
     margin: 0px auto auto 0px;
     font-size: 1em;
@@ -183,8 +175,7 @@ a:hover {
   .contact {
     width: 80%;
   }
-  
-  
+
   .introduction {
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -193,38 +184,35 @@ a:hover {
     text-align: left;
     max-width: 60%;
     padding-right: 10px;
-    
   }
   .portfolio-outter {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: auto;
   }
   .project {
     max-width: 50%;
-    margin: auto;
   }
 }
 
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1024px) {
   h1 {
     margin: auto auto auto 0px;
   }
   .top-nav {
     display: flex;
     width: 90%;
-    margin: auto auto 25px  auto;
-    
+    margin: auto auto 25px auto;
   }
   .top-nav ul {
-   margin: auto 0px auto auto;
-   flex-direction: row;
+    margin: auto 0px auto auto;
+    flex-direction: row;
   }
   .top-nav li {
-    font-size: 1.5em
+    font-size: 1.5em;
   }
-  
-  
+
   .project {
     max-width: 33%;
     margin-bottom: 50px;
@@ -242,7 +230,6 @@ a:hover {
 
 @media only screen and (min-width: 1400px) {
   .top-nav li {
-    font-size: 1.5em
+    font-size: 1.5em;
   }
- 
 }
